--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^11.0.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-floating-whatsapp": "^5.0.8",
     "react-hook-form": "^7.51.1",
     "react-router-dom": "^6.22.3",
     "styled-components": "^6.1.8",
